--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
 # ------------------------------------------------------------------------------------------------------------------------------------------
   build-linux:
     name: Linux
+    if: false
     runs-on: ubuntu-latest
     container: quassel/quassel-build-env:${{ matrix.dist }}
     strategy:
@@ -114,7 +115,7 @@ jobs:
       # If Homebrew begins failing in the future due to out-of-date versions,
       # it can be re-enabled here as follows...
       # run: brew update && [below command]
-      run: brew install boost ccache ninja qca qt5
+      run: brew install boost ccache ninja qt5
 
     - name: Get timestamp
       id: get-timestamp
@@ -167,6 +168,7 @@ jobs:
 # ------------------------------------------------------------------------------------------------------------------------------------------
   build-windows:
     name: Windows
+    if: false
     runs-on: windows-latest
     env:
       WORKSPACE: ${{ github.workspace }}
